css/style.css
/* ... */
@media (max-width: 767px) {
  .first-screen__opening {
    height: 532px;
    padding-top: 90px;
    padding-bottom: 172px; }
  .first-screen__title {
    font-size: 48px;
    line-height: 48px;
    max-width: 295px; }
  .first-screen__slogan {
    font-size: 18px; }
  .first-screen__btn {
    width: 220px;
    height: 50px;
    font-size: 14px;
    line-height: 50px; } }

.social {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  width: 140px;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center; }

.social__item {
  width: 20px;
  height: 20px;
  color: white; }
  .social__item:hover {
    color: #f8a25a; }

.social__icon {
  width: 100%;
  height: 100%; }

.features__item:nth-child(2n) {
  padding-top: 210px; }

.features__count {
  font-family: 'Playfair Display', serif;
  color: #fde3c9;
  font-weight: bold;
  font-size: 85px; }

.features__description {
  padding-right: 30px;
  font-family: 'Raleway', sans-serif;
  font-weight: 300;
  font-size: 16px; }

@media (max-width: 1169px) {
  .features__item:nth-child(2n) {
    padding-top: 150px; }
  .features__description {
    font-size: 18px; } }

@media (max-width: 767px) {
  .features {
    padding-bottom: 50px; }
  .features__item:nth-child(2n) {
    padding-top: 0px; }
  .features .container {
    padding-top: 60px;
    padding-bottom: 60px; } }

@media (min-width: 1170px) {
  .slider__wrapper {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex; }
  .slider__radio {
    display: none; }
  .slider__item {
    position: relative;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    height: 500px;
    width: 25%;
    background-size: auto 500px;
    -webkit-transition: .3s;
    transition: .3s; }
    .slider__item::before {
      content: "";
      position: absolute;
      display: block;
      width: 100%;
      height: 100%;
      background: rgba(24, 44, 61, 0.8); }
    .slider__item:hover::before {
      background: rgba(24, 44, 61, 0); }
    .slider__item:hover p {
      display: none; }
    .slider__item:hover a {
      display: block; } }

@media (max-width: 1169px) {
  .slider__wrapper {
    margin: 0 -36px; }
  .slider .slick-slide {
    width: calc(100vw - 72px);
    padding: 0; }
  .slider__item {
    position: relative;
    height: 610px;
    background-size: cover !important; }
    .slider__item::before {
      content: "";
      position: absolute;
      display: block;
      width: 100%;
      height: 100%;
      background: rgba(24, 44, 61, 0.8);
      -webkit-transition: .8s;
      transition: .8s; }
  .slick-center:before {
    background: rgba(24, 44, 61, 0) !important; } }

@media (max-width: 767px) {
  .slider__wrapper {
    margin: 0 -20px; }
  .slider .slick-slide {
    width: calc(100vw - 40px); }
  .slick-center:before {
    background: rgba(24, 44, 61, 0) !important; } }

.portfolio__menu {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  padding: 0;
  margin: 0;
  width: 570px; }

.portfolio__item {
  list-style: none;
  font-family: 'Raleway', serif;
  display: block;
  height: 40px;
  font-weight: 600;
  font-size: 18px;
  margin-bottom: 48px;
  color: #949392;
  text-decoration: none;
  cursor: pointer; }

.portfolio__item--active {
  border-bottom: 1px solid black;
  color: #00203a; }

.portfolio__tab {
  display: none; }

.portfolio__tab--active {
  display: block; }

.portfolio__cap {
  text-align: center;
  width: 100%; }

.portfolio__slider {
  width: 100%; }

.portfolio__slide {
  background-position: center; }

@media (min-width: 1170px) {
  .no-webp .portfolio__living_room_interior:hover,
  .no-js .portfolio__living_room_interior:hover,
  .webp .portfolio__living_room_interior:hover {
    width: 480px; }
  .no-webp .portfolio__unknow_interior:hover,
  .no-js .portfolio__unknow_interior:hover,
  .webp .portfolio__unknow_interior:hover {
    width: 980px; }
  .no-webp .portfolio__dining_room_interior:hover,
  .no-js .portfolio__dining_room_interior:hover,
  .webp .portfolio__dining_room_interior:hover {
    width: 820px; }
  .no-webp .portfolio__loft_interior:hover,
  .no-js .portfolio__loft_interior:hover,
  .webp .portfolio__loft_interior:hover {
    width: 790px; } }

.no-webp .portfolio__living_room_interior,
.no-js .portfolio__living_room_interior {
  background: url("../img/portfolio-interior-1.jpg") no-repeat;
  background-position: center; }

.webp .portfolio__living_room_interior {
  background: url("../img/portfolio-interior-1.webp") no-repeat;
  background-position: center; }
  .webp .portfolio__living_room_interior:hover {
    width: 480px; }

.no-webp .portfolio__unknow_interior,
.no-js .portfolio__unknow_interior {
  background: url("../img/portfolio-interior-2.jpg") no-repeat;
  background-position: center; }

.webp .portfolio__unknow_interior {
  background: url("../img/portfolio-interior-2.webp") no-repeat;
  background-position: center; }

.no-webp .portfolio__dining_room_interior,
.no-js .portfolio__dining_room_interior {
  background: url("../img/portfolio-interior-3.jpg") no-repeat;
  background-position: center; }

.webp .portfolio__dining_room_interior {
  background: url("../img/portfolio-interior-3.webp") no-repeat;
  background-position: center; }

.no-webp .portfolio__loft_interior,
.no-js .portfolio__loft_interior {
  background: url("../img/portfolio-interior-4.jpg") no-repeat;
  background-position: center; }

.webp .portfolio__loft_interior {
  background: url("../img/portfolio-interior-4.webp") no-repeat;
  background-position: center; }

.portfolio__description {
  position: relative;
  z-index: 2800;
  padding: 20px;
  font-family: 'Raleway', serif;
  color: #fff;
  font-size: 16px;
  font-weight: 400;
  letter-spacing: 1.2px;
  line-height: 20px; }
/* ... */

